--- a/src/shared/ui/emptyScreen/emptyScreen.module.css
+++ b/src/shared/ui/emptyScreen/emptyScreen.module.css
@@ -2,97 +2,29 @@
 
 .EmptyScreenContainer {
 	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	/* z-index: 2; */
+    top: 50%;
+    bottom: 0;
+    left: 50%;
+    right: 0;    
+    z-index: 2;
+    transform: translate(-50%,-50%);
+}
+
+.EmptyScreenView {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* width:100%;
-	height: 100%; */
+	flex-direction: column;	
 }
 
-.EmptyScreenCircle {
-	border-radius: 50%;
-	background-color: rgba(0, 0, 0, .04);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	margin: 0 auto;
+.EmptyIconContainer {
+	margin: 20px;
 }
 
-.EmptyImgContainer img {
+.bodyText {
+	font-size: 1.2rem !important;
+	margin-left: 15px;
+	margin-right: 15px;
 	height: auto;
-	width: 100%;
-	opacity: 0.6;
-	filter: grayscale(100%);
-}
-
-/* Large */
-
-.large {
-	width: 380px;
-	height: 380px;
-}
-
-.large .EmptyImgContainer {
-	width: 180px;
-	height: auto;
-}
-
-.large .bodyText {
-	width: 200px;
 	text-align: center;
-}
-
-/* Medium */
-
-.medium {
-	width: 320px;
-	height: 320px;
-}
-
-.medium .EmptyImgContainer {
-	width: 140px;
-	height: auto;
-}
-
-.medium .titleText {
-	font-size: 1.125rem;
-	/* line-height: 1.3 */
-}
-
-.medium .bodyText {
-	font-size: 0.8rem;
-	width: 180px;
-	text-align: center;
-	/* line-height: 1.2 */
-}
-
-
-/* Small */
-
-.small {
-	width: 260px;
-	height: 260px;
-}
-
-.small .EmptyImgContainer {
-	width: 100px;
-	height: auto;
-}
-
-.small .titleText {
-	font-size: 1.0rem;
-	/* line-height: 1.2 */
-}
-
-.small .bodyText {
-	font-size: 0.725rem;
-	width: 160px;
-	text-align: center;
-	/* line-height: 1.1 */
 }
